feature: 使用tableView 替代List, 优化双击单击问题, 界面更美观

--- a/redis-pro/Views/Sidebar/RedisKeysTableController.xib
+++ b/redis-pro/Views/Sidebar/RedisKeysTableController.xib
@@ -21,7 +21,7 @@
                 <rect key="frame" x="1" y="1" width="842" height="315"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="24" headerView="ext-4a-OBW" viewBased="YES" id="TQN-ha-3Ks">
+                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" alternatingRowBackgroundColors="YES" columnReordering="NO" columnSelection="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="24" headerView="ext-4a-OBW" viewBased="YES" id="TQN-ha-3Ks">
                         <rect key="frame" x="0.0" y="0.0" width="842" height="287"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <size key="intercellSpacing" width="4" height="2"/>
@@ -48,7 +48,7 @@
                                                 <rect key="frame" x="0.0" y="4" width="4" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="J2H-M4-MCD">
-                                                    <font key="font" metaFont="system" size="11"/>
+                                                    <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                 </textFieldCell>
@@ -86,13 +86,13 @@
                                                 <rect key="frame" x="0.0" y="4" width="42" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Gw5-HK-OTw">
-                                                    <font key="font" metaFont="system" size="11"/>
+                                                    <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                 </textFieldCell>
                                                 <connections>
-                                                    <binding destination="aVG-0S-ODh" name="textColor" keyPath="objectValue.typeColor" id="Sos-o9-5nz"/>
                                                     <binding destination="aVG-0S-ODh" name="value" keyPath="objectValue.type" id="vWr-IH-mNo"/>
+                                                    <binding destination="aVG-0S-ODh" name="textColor" keyPath="objectValue.typeColor" id="Sos-o9-5nz"/>
                                                 </connections>
                                             </textField>
                                         </subviews>
@@ -125,7 +125,7 @@
                                                 <rect key="frame" x="0.0" y="4" width="792" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="SyV-PJ-QcO">
-                                                    <font key="font" metaFont="system" size="12"/>
+                                                    <font key="font" metaFont="cellTitle"/>
                                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                 </textFieldCell>
