--- a/redis-pro/Views/Login/RedisListTableController.xib
+++ b/redis-pro/Views/Login/RedisListTableController.xib
@@ -21,7 +21,7 @@
                 <rect key="frame" x="1" y="1" width="832" height="468"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" alternatingRowBackgroundColors="YES" columnReordering="NO" columnSelection="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="24" headerView="Fcj-dB-gQM" viewBased="YES" id="mDK-uo-Z3e">
+                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" alternatingRowBackgroundColors="YES" columnReordering="NO" columnSelection="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="24" headerView="Fcj-dB-gQM" viewBased="YES" id="mDK-uo-Z3e">
                         <rect key="frame" x="0.0" y="0.0" width="832" height="440"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <size key="intercellSpacing" width="12" height="2"/>
