--- a/redis-pro/Views/System/ClientListTableController.xib
+++ b/redis-pro/Views/System/ClientListTableController.xib
@@ -21,7 +21,7 @@
                 <rect key="frame" x="1" y="1" width="1696" height="354"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="18" headerView="R1G-fs-Zwo" viewBased="YES" id="hIO-5W-eZR">
+                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="18" headerView="R1G-fs-Zwo" viewBased="YES" id="hIO-5W-eZR">
                         <rect key="frame" x="0.0" y="0.0" width="1720" height="326"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <size key="intercellSpacing" width="11" height="6"/>
